# repo-health-scorecard

./: README.md  mise.toml  prek.toml  pyproject.toml
.github/: copilot-instructions.md
docs/adr/: 001-architecture.md  002-metrics-definition.md  003-raw-code-repository.md
src/: main.py
src/cli/: cli.py
src/facts/: github_api_client.py  github_repository_fact.py  github_repository_fact_fetcher.py  github_rest_repository.py  raw_repository_repository.py  repository_cloner.py  subprocess_runner.py
src/metrics/: metric.py  metrics_evaluator.py
src/metrics/metrics_definitions/: bus_factor.py  dependency_management.py
src/models/: github.py  metric.py  metric_definition.py  models.py  scorecard.py
src/reporting/: markdown.py  report.py
tests/: test_models.py  test_raw_repository_repository.py
